CHANGELOG

2.0.33
UTILS:

BUGFIX:

GENERAL:


2.0.32 (20220318)
UTILS:
* UTIL type=rule | rework 'filter=(service port.counter)' is now 'filter=(service.port.count >,<,=,! COUNT)')
* UTIL type=rule | extend actions=exportToExcel with service Counter
* UTIL type=protocoll-number-download | introduction for future usage
* UTIL type=rule | actions=exportToExcel - introduce 'rulebase' column
* UTIL type=rule | 'filter=(schedule expire.in.days XYZ) renamed to 'filter=(schedule.expire.in.days >,<,=,! XYZ)'
* UTIL type=securityProfilegroup actions=exporttoexcel | introduce information about used location and counter
* UTIL UI - introduce additional arguments for playbook JSON file
* UTIL type=playbook | introduce argument location= handling
* UTIL type=rule | actions=exporttoexcel:file.html,ResolveServiceSummary | improvement for Service Counters

BUGFIX:
* UTIL type=rule | actions=exportToExcel - bugfix for service.count if application-default is set
* UTIL type=rule | 'filter=(service.port.count = PORTCOUNT)' - bugfix to change in code to '=='
* class IP4MAP | bugfix for all filters where IP calculation is used e.g. UTIL type=rule 'filter=(src is.partially.or.fully.included.in.list LIST)'
* class SecurityProfileGroupStrore | bugfix to search for available object name only in current Store
* UTIL type=address actions=move:XYZ,removeifmatch | bugfix if address-group has same nested address-group member, but this nested group has different members
* UTIL type=service actions=move:XYZ,removeifmatch | bugfix for nested servicegroups with different members
* class DeviceCloud/FawkesConf/PanoramaConfg - bugfix to calculate parentCentralStore
* class Devicecloud / FawkesConfig | bugfix to handle securityProfileStore correctly
* class SecurityProfileGroup | bugfix to get correct reference calculation
* UTIL type=device actions=display-shadowrule | bugfix for nat rules