@@ -2,6 +2,7 @@ CHANGELOG
 
 2.0.33
 UTILS:
+* UTIL type=address | introduce 'filter=(ip.count >,<,=! VALUE)' AND 'actions=create-range2network'
 
 BUGFIX:
 
